Updated to newest Chrome debug protocol